# scrall

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  index.md  pyproject.toml
Documentation/: Scrall grammar tree.graffle
Examples/: e1.scrall
Grammar/: scrall.peg  scrall.pegjs
Parser/: activity_parse_tree.dot  activity_peg_parser_model.dot  peggrammar_parse_tree.dot  peggrammar_parser_model.dot  scrall_exceptions.py  scrall_parser.py  scrall_visitor.py
deprecated/Parser/: nocomment.py  scrall_parser.py  scrall_visitor.py  t.py
deprecated/Reference/: scrall2_ref.peg  scrall_ref.peg
examples/: Ping.scrall  all_examples.scrall  aslev.scrall  aslev2.scrall  ping.scrall  table_examples.scrall  transfer.scrall
parse/: parser.py  visitor.py
scrall/: __main__.py  exceptions.py  log.conf
scrall/examples/: cabin.scrall  test_example.scrall
scrall/parse/: parser.py  visitor.py
src/scrall/: __init__.py  __main__.py  log.conf  scrall.peg
src/scrall/parse/: parser.py  scrall.peg  visitor.py
technotes/: Scrall grammar tree.graffle  ping-both-ways.graffle
technotes/old/: Scrall grammar tree old.graffle
tests/: test_calls.py  test_decision_scalar_expr.py  test_decision_wrap.py  test_decision_wrap_false.py  test_delete.py  test_operation.py  test_ping_actions.py  test_selection.py  test_signals.py  test_state_actions.py
working/: Ping.scrall  ping.scrall
