[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrall"
version = "0.2.16"
description = "Starr's Concise Relational Action Language - For Shlaer-Mellor Executable UML"
readme = "README.md"
authors = [{ name = "Leon Starr", email = "leon_starr@modelint.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["action language", "executable uml", "mbse", "xuml", "xtuml", "platform independent", "sysml"]
dependencies = ["Arpeggio", 'tomli; python_version < "3.11"']
requires-python = ">=3.10"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bump2version", "pytest"]

[project.scripts]
scrall = "scrall.__main__:main"

[project.urls]
repository    = "https://github.com/modelint/scrall"
documentation = "https://github.com/modelint/scrall/wiki"
